--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -80,9 +80,12 @@
   @media (max-width: 700px) {
     display: none;
   }
-  Image {
+  .image {
+    background-image: url("../public/assets/assets/Home-Hero-Image.jpg");
     position: center;
     background-size: cover;
+    width: 60vw;
+    height: 40vw;
   }
   display: flex;
   .header-desktop-info {
@@ -91,11 +94,24 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    h1 {
+      font-size: 2.2vw;
+
+    }
     .header-desktop-info-buttons {
-      margin-top: 10px;
+      margin-top: 7vw;
       .info-button {
+        border: 1px solid $color-grey;
         color: $color-grey;
         text-decoration: none;
+        padding: 1.5vw;
+        font-size: 1.6vw;
+      }
+      .info-button-left {
+        margin-right: 2vw;
+      }
+      :hover {
+        border: 2px solid $color-yellow;
       }
     }
   }
@@ -177,6 +193,15 @@
   background: linear-gradient(150deg, $color-brown 0%, $color-yellow 74%);
   transform: translateX(100%);
   transition: all 0.5s ease-in-out;
+  z-index: 5;
+
+  a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
   @media (min-width: 700px) {
     display: none;
   }
@@ -190,13 +215,14 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  ul li {
-    height: 10px;
+  ul {
     :hover {
-      border-bottom: 2px solid $color-yellow;
+      border-bottom: 1px solid $color-yellow;
+    }
+    li {
+      cursor: pointer;
     }
   }
-
   a {
     color: $color-grey;
     font-weight: normal;
@@ -231,8 +257,9 @@
   background: linear-gradient(150deg, $color-brown 0%, $color-yellow 74%);
   transform: translateX(40%);
   transition: all 0.5s ease-in-out;
+  z-index: 5;
+
   a {
-    margin: 20px 0;
     color: white;
     font-weight: bold;
     text-decoration: none;
