--- a/styles/Question.scss
+++ b/styles/Question.scss
@@ -1,4 +1,7 @@
 .question {
+  @media (min-width: 700px) {
+    display: none
+  }
   display: flex;
   flex-direction: column;
   margin: 20px 10px;
