--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,7 +11,8 @@
 @import "AboutUs";
 @import "Login";
 @import "Register";
-
+@import "Logut";
+@import "Step";
 
 body {
 font-family: $font-base;
