--- a/styles/Login.scss
+++ b/styles/Login.scss
@@ -55,3 +55,29 @@
     }
   }
 }
+
+.login-content {
+  h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+}
+  .login-buttons-success {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    width: 500px;
+    @media (max-width: 700px) {
+      width: 400px;
+    }
+    .btn {
+      padding: 15px 20px;
+      font-size: 1.1rem;
+      color: $color-grey;
+      text-decoration: none;
+    }
+    :hover {
+      border: 1px solid $color-grey;
+    }
+  }
+
