--- a/styles/Footer.scss
+++ b/styles/Footer.scss
@@ -2,7 +2,6 @@
   background: $color-yellow;
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
   padding: 20px;
   font-size: 0.9rem;
   @media (min-width: 700px) {
@@ -92,12 +91,14 @@
         justify-content: center;
         align-items: center;
         font-weight: bold;
-        width: 500px;
 
         .form {
           display: flex;
           flex-direction: column;
           align-items: flex-end;
+          @media (min-width: 1000px) {
+            width: 500px;
+          }
         }
 
         .form-up {
