--- a/styles/settings/mixins.scss
+++ b/styles/settings/mixins.scss
@@ -10,10 +10,24 @@
   }
 }
 
+
 @mixin mobile {
-  @media (max-width: 792px) {
+  @media (max-width: 800px) {
     @content;
   }
 }
+
+@mixin mobile-mini {
+  @media (max-width: 550px) {
+    @content;
+  }
+}
+
+@mixin mobile-min {
+  @media (min-width: 800px) {
+    @content;
+  }
+}
+
 
 
